Reduced the buffer, changed some stuff in order to make the vtRF work with doubleTouch

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 find_package(OpenCV REQUIRED)
 
-#add_subdirectory(doubleTouch)
+add_subdirectory(doubleTouch)
 add_subdirectory(visuoTactileRF)
 add_subdirectory(visuoTactileWrapper)
 add_subdirectory(demoAvoidance)
